# MONITOR_SYSTEM

./: .gitignore  CMakeLists.txt  README.md  Salam.txt  a.html  abc.html  hello.html
.github/workflows/: main.yml
client/: client.c  client.cpp
common/: protocol.h
server/: server.c  server.cpp
